--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "styled-components": "^6.1.12",
     "tailwindcss": "^3.4.6",
     "typescript": "^4.9.5",
