--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/node": "^16.18.103",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.7",
@@ -54,6 +53,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/react-modal": "^3.16.3"
+    "@types/react-modal": "^3.16.3",
+    "@typescript-eslint/eslint-plugin": "^6.21.0"
   }
 }
