--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react-modal": "^3.16.3",
-    "@typescript-eslint/eslint-plugin": "^6.21.0"
+    "@typescript-eslint/parser": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "eslint-config-standard-with-typescript": "^43.0.1"
   }
+
 }
