--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,6 @@
     command = "npm run build"
     publish = "build"
 [[redirects]]
-  from = "/api/*"
-  to = "http://43.200.219.68:8000/api/:splat"
-  status = 200
-  force = true
+    from = "/*"
+    to = "/index.html"
+    status = 200
